go/examples/knative-eventing-source/deploy/resnet-grpc/subscription-resnet.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: rgwpubsub-svc
spec:
  runLatest:
    configuration:
      revisionTemplate:
        spec:
          container:
            image: docker.io/rootfs/rgwpubsub-knative-resnet
            env:
            - name: S3_ACCESS_KEY_ID
              valueFrom:
                 secretKeyRef:
                    name: rgw-pubsub-secret
                    key: s3id
            - name: S3_SECRET_ACCESS_KEY
              valueFrom:
                 secretKeyRef:
                    name: rgw-pubsub-secret
                    key: s3key
            - name: S3_HOSTNAME
              valueFrom:
                 secretKeyRef:
                    name: rgw-pubsub-secret
                    key: s3host
            - name: RESNET_SERVING_ENDPOINT
              valueFrom:
                 secretKeyRef:
                    name: rgw-pubsub-secret
                    key: tfserver
